# pydoctrinediagrams

./: LICENSE  README.md  pyproject.toml  requirements.txt
pydoctrinediagrams/: __init__.py  __main__.py  entitynode.py
